--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "5.0.0-alpha.6",
     "redux": "^3.7.2",
-    "redux-actions": "^2.2.1"
+    "redux-actions": "^2.2.1",
+    "redux-saga": "^0.16.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.3",
