--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-runtime": "^6.26.0",
+    "chart.js": "^2.7.1",
     "classnames": "~2.2.5",
     "core-js": "^2.5.1",
     "echarts": "^3.7.1",
