--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jquery-slimscroll": "~1.3.8",
     "lodash": "^4.17.5",
     "material-ui": "^0.19.0",
+    "moment": "^2.20.1",
     "prop-types": "^15.5.10",
     "rc-queue-anim": "^1.0.4",
     "react": "^15.5.4",
