--- a/.babelrc
+++ b/.babelrc
@@ -1,22 +1,33 @@
 {
   "presets": [
+    "es2015",
     "react",
     "stage-2",
   ],
   "plugins": [
     "transform-runtime",
+    "transform-es2015-block-scoping",
     "syntax-dynamic-import",
     "transform-decorators-legacy",
     "transform-object-rest-spread",
     "react-hot-loader/babel",
     "transform-regenerator",
+    "transform-class-properties",
   ],
   "env": {
+    "module":{
+      "presets":[
+        ["es2015",{"modules":false}],
+        "stage-2"
+      ]
+    },
     "test": {
       "plugins": [
         "transform-decorators-legacy",
         "transform-object-rest-spread",
-        "istanbul"
+        "transform-runtime",
+        "syntax-dynamic-import",
+        "transform-regenerator",            
       ]
     }
   }
