--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-airbnb": "^2.0.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2015-native-modules": "^6.6.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
