--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react-router-redux": "5.0.0-alpha.6",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
-    "redux-saga": "^0.16.0"
+    "redux-saga": "^0.16.0",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.3",
